# CloneGuard

app/: README.md  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  main.jsx
app/src/components/: Navbar.jsx
app/src/idl/: clone_guard.json
app/src/pages/: Home.jsx  Register.jsx  Registry.jsx  Report.jsx  Verify.jsx
app/src/utils/: anchor.js  constants.js  crypto.js
clone-guard/: Anchor.toml
clone-guard/programs/clone-guard/: Cargo.toml
clone-guard/programs/clone-guard/src/: errors.rs  lib.rs
clone-guard/programs/clone-guard/src/instructions/: mod.rs  register_app.rs  report_clone.rs  update_app.rs  verify_app.rs
clone-guard/programs/clone-guard/src/state/: app_registry.rs  clone_report.rs  developer.rs  mod.rs
clone-guard/tests/: clone-guard.ts
