[package]
name = "clone-guard"
version = "0.1.0"
description = "CloneGuard - Blockchain based APK authenticity verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clone_guard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
